# GameBoyEmulator

./: CMakeLists.txt  README.md  main.c
libs/emu_hardware/: gba_cpu.c  gba_memory.c
libs/emulators/: gba_emu.c
